<resources>
    <string name="app_name">Porject2</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="my_list">My List</string>
    <string name="data_log">Data Log</string>
    <string name="add_items">Add Items</string>
    <string name="enter_name_and_quantity_of_the_item_to_be_added_to_the_list">Enter name and quantity of the item to be added to the list</string>
    <string name="name_of_item">Name of item</string>
    <string name="quantity">Quantity</string>
    <string name="add_item">Add</string>
    <string name="clear">Clear</string>
</resources>
